Add code from 10/5 lecture.

--- a/selectors.html
+++ b/selectors.html
@@ -7,26 +7,27 @@
   </head>
   <body>
 
-    <h1>This is the title</h1>
+    <h1 id="site-title" class="italics-text">This is the title</h1>
 
-    <div>
+    <div class="italics-text with-border">
       First div
       <p>First div's paragraph</p>
     </div>
 
-    <div>
+    <div class="with-border">
       Second div
       <p>Second div's paragraph</p>
     </div>
 
     <div>
       Third div
-      <p>Third div's paragraph</p>
+      <p class="italics-text">Third div's paragraph</p>
     </div>
 
-    <div>
+    <div id="bookmarked-div" class="italics-text">
       Fourth div
       <p>Fourth div's paragraph</p>
+      <div><div><div><p>Deeply nested paragraph</p></div></div></div>
     </div>
 
     <div>
