--- a/boxes.html
+++ b/boxes.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <div class="outer-box">
+    <div class="outer-box" id="special-div">
       <div class="inner-box">
         <p id="special-p">This text is inside inner box #1.</p>
       </div>
@@ -29,6 +29,17 @@
       <div class="inner-box">
         <p>This text is inside inner box #4.</p>
       </div>
+    </div>
+
+    <div class="special-outer-box">
+      <p class="inner-p">1</p>
+      <p class="inner-p">2</p>
+      <p class="inner-p">3</p>
+      <p class="inner-p">4</p>
+      <p class="inner-p">5</p>
+      <p class="inner-p">6</p>
+      <p class="inner-p">7</p>
+      <p class="inner-p">8</p>
     </div>
 
   </body>
