--- a/text.html
+++ b/text.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <title>Styling text</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap" rel="stylesheet">  
+
     <link rel="stylesheet" href="text.css">
   </head>
   <body>
