Add code from 10/14 lecture.

--- a/pseudothings.html
+++ b/pseudothings.html
@@ -15,6 +15,14 @@
 
     <ul>
       <li>Luke Skywalker</li>
+      <li class="hoverable">Princess Leia</li>
+      <li>Rey</li>
+      <li class="hoverable">Darth Vader</li>
+      <li>Kylo Ren</li>
+    </ul>
+
+    <ul class="hoverable">
+      <li>Luke Skywalker</li>
       <li>Princess Leia</li>
       <li>Rey</li>
       <li>Darth Vader</li>
